--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </div>
             <div class="rightnev">
                <span >Home</span>
-               <span>About</span>
-               <span>Food</span>
-               <span>Service</span>
-               <span>Contact</span>
+               <span class="clickable">About</span>
+               <span class="clickable">Food</span>
+               <span class="clickable">Service</span>
+               <span class="clickable">Contact</span>
             </div>
         </div>
     </nav>
@@ -33,220 +33,220 @@
          <div class="food-field">
 
             <div class="food-details">
-                <div><img class="clickable-image" src="assests/Chaat.jpg"></div>
+                <div><img class="clickable" src="assests/Chaat.jpg"></div>
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Chaats</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹65 / 8pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
             </div>
 
-                <div class="food-details"><img class="clickable-image" src="assests/Dosas.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Dosas.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Dosa</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹80 / 2pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
                 <div class="food-details"><img class="clickable-image" src="assests/Falahaar.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Falahaar</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹95 / 100gm</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/golgappa.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/golgappa.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Gol Gappa</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹50 / 10pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Icecream.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Icecream.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Ice Cream</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹150 / 90gm</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Idlis.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Idlis.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>South Indian Food</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹129 / 6pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Kathi-Roll (1).jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Kathi-Roll (1).jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Kathi Roll</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹121 / 2pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Kulfi-Faluda.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Kulfi-Faluda.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Kulfi Faluda</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹119 / 72gm</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Lassi.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Lassi.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Lassi</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹65 / 150ml</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/masala-chai.png" alt="">
+                <div class="food-details"><img class="clickable" src="assests/masala-chai.png" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Hot Tea</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹30 / 1pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/kathi-roll.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/kathi-roll.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Veg Role</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹45 / 1pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/omelette.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/omelette.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Omelette</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹79 / 1pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
                 <div class="food-details"><img class="clickable-image" src="assests/Paan.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Paan</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹49 / 1pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Pakoda.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Pakoda.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Crispy Pakoda</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹65 / 100gm</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Paneer-Tikka.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Paneer-Tikka.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Paneer Tikka</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹149 / 12pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/pav-bhaji.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/pav-bhaji.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Pav Bhaji</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹85 / 2pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Pizza.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Pizza.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Fusion Pizza</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹239 / Regular</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/pyaz-ki-kachori.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/pyaz-ki-kachori.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>pyaz-ki-kachori</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹99 / 1pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Rabdi-Ghevar.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Rabdi-Ghevar.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Rabri Ghevar</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹139 / 45gm</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/shrikhand.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/shrikhand.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Shrikhand</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹349 / 90gm</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Soda-Lime-Water.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Soda-Lime-Water.jpg" alt="">
 <div class="food-buttom">
-    <p>Food</p>
+    <p>Soda Lime Water</p>
     <div class="price-button">
-        <p>₹149</p>
+        <p>₹55 / 150ml</p>
         <button>Pre-Order</button>
     </div>
 </div>
 </div>
 
-                <div class="food-details"><img class="clickable-image" src="assests/Tandoori-Food.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Tandoori-Food.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Tandoori Food</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹149 / plate</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Webp.net-compress-image-2.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Webp.net-compress-image-2.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Momos</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹79 / 16pc</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
                 </div>
-                <div class="food-details"><img class="clickable-image" src="assests/Webp.net-compress-image-5-1.jpg" alt="">
+                <div class="food-details"><img class="clickable" src="assests/Webp.net-compress-image-5-1.jpg" alt="">
                 <div class="food-buttom">
-                    <p>Food</p>
+                    <p>Jalebi</p>
                     <div class="price-button">
-                        <p>₹149</p>
+                        <p>₹75 / 50gm</p>
                         <button>Pre-Order</button>
                     </div>
                 </div>
