--- a/image.html
+++ b/image.html
@@ -16,10 +16,10 @@
         <div class="nevbar">
             <div class="leftnev">
                 <span id="nevimg"><img src="assests/michael-jackson---mj-vector-logo.png" alt="image.png"></span>
-                <p>Food Counter</p>
+                <p class="clickable">Food Counter</p>
             </div>
             <div class="rightnev">
-               <span id="home-button">Home</span>
+               <span id="home-button" class="clickable">Home</span>
                <span>About</span>
                <span>Food</span>
                <span>Service</span>
@@ -28,13 +28,9 @@
         </div>
     </nav>
     <div class="container">
-        <div class="food-field">
-        <img id="navi" src="assests/Dosas.jpg" alt="">
-        
+        <h3>Coming Soon...</h3>
         </div>
     </div>
-
-
 
     <script src="scripts.js"></script>
 </body>
